--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-charges",
+  "name": "tapflow",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -41,12 +41,15 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@react-email/components": "^0.0.31",
     "@tanstack/react-query": "^5.62.2",
     "@tanstack/react-table": "^8.20.5",
     "@types/three": "^0.170.0",
     "@types/twilio": "^3.19.3",
     "@upstash/redis": "^1.34.3",
+    "ai": "^4.0.14",
     "axios": "^1.7.9",
+    "better-auth": "^1.0.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -55,10 +58,11 @@
     "embla-carousel-react": "^8.5.1",
     "file-type": "^19.6.0",
     "framer-motion": "^11.13.1",
+    "hono": "^4.6.13",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
     "next": "14.2.18",
-    "next-themes": "^0.4.3",
+    "next-themes": "^0.4.4",
     "openai": "^4.76.0",
     "prisma": "^6.0.1",
     "react": "^18",
@@ -67,6 +71,7 @@
     "react-hook-form": "^7.53.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.14.1",
+    "resend": "^4.0.1",
     "sharp": "^0.33.5",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
