--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "@react-email/components": "^0.0.31",
     "@tanstack/react-query": "^5.62.2",
     "@tanstack/react-table": "^8.20.5",
+    "@trigger.dev/sdk": "^3.3.6",
     "@types/three": "^0.170.0",
     "@types/twilio": "^3.19.3",
     "@upstash/redis": "^1.34.3",
+    "ably": "^2.6.0",
     "ai": "^4.0.14",
     "axios": "^1.7.9",
     "better-auth": "^1.0.15",
@@ -79,14 +81,17 @@
     "three": "^0.171.0",
     "twilio": "^5.3.7",
     "vaul": "^1.1.1",
+    "ws": "^8.18.0",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@trigger.dev/build": "^3.3.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
     "postcss": "^8",
