--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@trigger.dev/sdk": "^3.3.6",
     "@types/three": "^0.170.0",
     "@types/twilio": "^3.19.3",
+    "@upstash/qstash": "^2.7.19",
+    "@upstash/queue": "^1.0.1",
     "@upstash/redis": "^1.34.3",
     "ably": "^2.6.0",
     "ai": "^4.0.14",
@@ -79,7 +81,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.171.0",
-    "twilio": "^5.3.7",
+    "twilio": "^5.4.0",
     "vaul": "^1.1.1",
     "ws": "^8.18.0",
     "xlsx": "^0.18.5",
