--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "elevenlabs": "^0.18.1",
     "embla-carousel-react": "^8.5.1",
     "file-type": "^19.6.0",
