--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.171.0",
-    "twilio": "^5.4.0",
     "vaul": "^1.1.1",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8",
@@ -99,5 +98,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
   }
 }
