--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-email/components": "^0.0.31",
+    "@sendgrid/mail": "^8.1.4",
     "@tanstack/react-query": "^5.62.2",
     "@tanstack/react-table": "^8.20.5",
     "@trigger.dev/sdk": "^3.3.6",
@@ -68,6 +69,7 @@
     "lucide-react": "^0.468.0",
     "next": "14.2.18",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.9.16",
     "openai": "^4.76.0",
     "prisma": "^6.0.1",
     "react": "^18",
@@ -90,6 +92,7 @@
   "devDependencies": {
     "@trigger.dev/build": "^3.3.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ws": "^8.5.13",
