--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.171.0",
+    "usehooks-ts": "^3.1.0",
     "vaul": "^1.1.1",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8",
