--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "file-type": "^19.6.0",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.4.1",
+    "ioredis": "^5.4.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "next": "14.2.18",
     "next-themes": "^0.4.4",
@@ -92,6 +94,7 @@
   },
   "devDependencies": {
     "@trigger.dev/build": "^3.3.6",
+    "@types/lodash": "^4.17.14",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
