--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
